SONAR-9544 Long words in issue box breaks the display

--- a/server/sonar-web/src/main/js/components/common/LocationMessage.css
+++ b/server/sonar-web/src/main/js/components/common/LocationMessage.css
@@ -8,6 +8,8 @@
   color: #fff;
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
   font-size: 12px;
+  text-overflow: ellipsis;
+  overflow: hidden;
   transition: background-color 0.3s ease;
 }
 
